# TheCanadianExperience

./: movie.anim
CanadianExperienceLib/: AnimChannel.h  CMakeLists.txt  HaroldFactory.cpp  MachineDrawable.cpp  MachineDrawable.h  Picture.cpp  Picture.h  PictureFactory.cpp  ViewEdit.cpp  ViewEdit.h
MachineDemo/: main.cpp
MachineLib/: Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  CustomMachineFactory.cpp  CustomMachineFactory.h  Gear.cpp  Gear.h  Lever.cpp  Lever.h  Machine.h  MachineBase.cpp  MachineBase.h  MachineController.cpp  MachineController.h  MachineFactory.cpp  MachineFactory.h  MachineStandin.cpp  MachineStandin.h  Motor.cpp  Motor.h  OwensMachineFactory.cpp  OwensMachineFactory.h  Piston.cpp  Piston.h  Polygon.cpp  Polygon.h  Rod.cpp  Rod.h  RodSink.cpp  RodSink.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shape.cpp  Shape.h  TranslationSink.cpp  TranslationSink.h  (+4 more)
Tests/: CMakeLists.txt
html/: _actor_8cpp.html  _actor_8h.html  _actor_8h_source.html  _anim_channel_8cpp.html  _anim_channel_8h.html  _anim_channel_8h_source.html  _anim_channel_angle_8cpp.html  _anim_channel_angle_8h.html  _anim_channel_angle_8h_source.html  _anim_channel_point_8cpp.html  _anim_channel_point_8h.html  _anim_channel_point_8h_source.html  _arm_8cpp.html  _arm_8h.html  _arm_8h_source.html  _canadian_experience_app_8cpp.html  _canadian_experience_app_8h.html  _canadian_experience_app_8h_source.html  _component_8cpp.html  _component_8h.html  _component_8h_source.html  _custom_machine_factory_8cpp.html  _custom_machine_factory_8h.html  (+322 more)
(+61 files in other folders)
